Content color changes and quotes changes

--- a/contact.html
+++ b/contact.html
@@ -70,8 +70,8 @@
 					<p class="mb-0 phone"><span class="mailus">Phone no:</span> <a target="_blank"
 							href="https://api.whatsapp.com/send?phone=918105589596&text=Hi">+91 8105589596</a> or <span
 							class="mailus">email us:</span> <a target="_blank"
-							href="mailto:shravyashageru@gmail.com"><span
-								class="__cf_email__">shravyashageru@gmail.com</span></a>
+							href="mailto:teamithiyoga@gmail.com"><span
+								class="__cf_email__">teamithiyoga@gmail.com</span></a>
 					</p>
 				</div>
 				<div class="col-12 col-md d-flex justify-content-md-end">
@@ -177,7 +177,7 @@
 									</div>
 									<div class="text">
 										<p><span>Email:</span> <a target="_blank"
-												href="mailto:shravyashageru@gmail.com">shravyashageru@gmail.com</span></a>
+												href="mailto:teamithiyoga@gmail.com">teamithiyoga@gmail.com</span></a>
 										</p>
 									</div>
 								</div>
@@ -307,9 +307,9 @@
 										href="https://api.whatsapp.com/send?phone=918105589596&text=Hi"><span
 											class="icon fa fa-phone"></span><span class="text">+91 8105589596</span></a>
 								</li>
-								<li><a target="_blank" href="mailto:shravyashageru@gmail.com"><span
+								<li><a target="_blank" href="mailto:teamithiyoga@gmail.com"><span
 											class="icon fa fa-paper-plane pr-4"></span><span
-											class="text"><span>shravyashageru@gmail.com</span></span></a>
+											class="text"><span>teamithiyoga@gmail.com</span></span></a>
 								</li>
 							</ul>
 						</div>
