--- a/index.html
+++ b/index.html
@@ -20,6 +20,23 @@
   <!-- <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet"> -->
   <!-- <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script> -->
 
+  <script type="application/javascript">
+    window.tiledeskSettings =
+    {
+      projectid: "65001237a994850013d3f7f7"
+    };
+    (function (d, s, id) {
+      var w = window; var d = document; var i = function () { i.c(arguments); };
+      i.q = []; i.c = function (args) { i.q.push(args); }; w.Tiledesk = i;
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s);
+      js.id = id; js.async = true; js.src = "https://widget.tiledesk.com/v6/launch.js";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'tiledesk-jssdk'));
+  </script>
+
+
   <script>
     // Function to open the iframe popup
     function openIframePopup() {
@@ -56,8 +73,8 @@
         <div class="col-12 col-md d-flex align-items-center">
           <p class="mb-0 phone"><span class="mailus">Phone no:</span> <a target="_blank"
               href="https://api.whatsapp.com/send?phone=918105589596&text=Hi">+91 8105589596</a> or <span
-              class="mailus">email us:</span> <a target="_blank" href="mailto:shravyashageru@gmail.com"><span
-                class="__cf_email__">shravyashageru@gmail.com</span></a>
+              class="mailus">email us:</span> <a target="_blank" href="mailto:teamithiyoga@gmail.com"><span
+                class="__cf_email__">teamithiyoga@gmail.com</span></a>
           </p>
         </div>
         <div class="col-12 col-md d-flex justify-content-md-end">
@@ -102,8 +119,8 @@
   </nav>
 
   <section class="hero-wrap degree-right js-fullheight" style="background-image:url(images/bg_2.jpg);">
-    <div class="overlay"></div>
-    <div class="overlay-2"></div>
+    <!-- <div class="overlay"></div> -->
+    <!-- <div class="overlay-2"></div> -->
     <div class="container">
       <div class="row no-gutters slider-text js-fullheight align-items-center" data-scrollax-parent="true">
         <div class="col-md-12 ftco-animate">
@@ -262,18 +279,18 @@
 
   <!-- Qoute Popup container -->
   <div style="display: none;" class="quote-popup-container" id="quotePopupContainer">
-    <div class="quote-popup-content">
+    <div class="quote-popup-content" style="background-image: url(images/clouds.jpg); background-size: cover; background-repeat: no-repeat; background-position: center;">
       <div>
         <div class="row justify-content-start pb-3">
           <div class="col-md-12 heading-section ftco-animate">
             <div class="quote-popup-header">
               <h2 class="mb-4"></h2>
-              <span class="quote-close-button" onclick="closeQuotePopup()">&times;</span>
+              <span style="color: white;" class="quote-close-button" onclick="closeQuotePopup()">&times;</span>
             </div>
-            <h2 class="mb-4">Welcome to ithi</h2>
-            <div class="d-flex about">
-              <h3 style="font-style: italic;">"I am standing on my own altar, The Poses are my prayers"</h3>
+            <div  class="d-flex about">
+              <h3 style="color: black ; font-style: italic;">"Let the beauty of what you love be what you do"</h3>
             </div>
+            <h4 style="color: black;" class="mb-4">Rumi</h4>
           </div>
         </div>
       </div>
@@ -425,7 +442,7 @@
   <section class="ftco-section ftco-services bg-light">
     <div class="container">
       <div class="row">
-        <div class="col-md-4 d-flex align-self-stretch ftco-animate">
+        <!-- <div class="col-md-4 d-flex align-self-stretch ftco-animate">
           <div class="services">
             <div class="d-flex align-items-center mb-4">
               <div class="icon mr-3 d-flex align-items-center justify-content-center"><span
@@ -438,12 +455,12 @@
                 to yoga, helping you achieve physical, mental, and spiritual balance.</p>
             </div>
           </div>
-        </div>
-        <div class="col-md-4 d-flex align-self-stretch ftco-animate">
+        </div> -->
+        <div class="col-md-6 d-flex align-self-stretch ftco-animate">
           <div class="services">
             <div class="d-flex align-items-center mb-4">
               <div class="icon mr-3 d-flex align-items-center justify-content-center"><span
-                  class="flaticon-trainer"></span></div>
+                  class="flaticon-sunrise"></span></div>
               <h3 class="heading mb-0">Why Choose <br>ithi?</h3>
             </div>
             <div class="media-body">
@@ -456,7 +473,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4 d-flex align-self-stretch ftco-animate">
+        <div class="col-md-6 d-flex align-self-stretch ftco-animate">
           <div class="services">
             <div class="d-flex align-items-center mb-4">
               <div class="icon mr-3 d-flex align-items-center justify-content-center"><span
@@ -510,15 +527,18 @@
               <div class="testimony-wrap">
                 <div class="text">
                   <span class="fa">"</span>
-                  <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and
-                    Consonantia, there live the blind texts. A small river named Duden flows by their place and supplies
-                    it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences
-                    fly into your mouth.</p>
+                  <p class="mb-4">I have been practicing yoga with ithi for almost two years. I was first skeptical
+                    about how much yoga I could learn online and how well I could execute the postures. The trainers
+                    completely changed the way I perceived that. I was empowered to see the practice's bigger picture. I
+                    went above and beyond my limit because of Shruthi's excellent coaching and incredible inspiration. I
+                    always eagerly anticipate my yoga lessons. Shruthi is an incredible teacher, and I am overjoyed to
+                    have her as my mentor because she goes above and beyond to broaden my horizons. Heartfelt
+                    appreciation to you, Shruthi.</p>
                   <div class="d-flex align-items-center" style="width: 100%;">
-                    <div class="user-img" style="background-image: url(images/person_1.jpg)"></div>
+                    <div class="user-img" style="background-image: url(images/sunthari-teacher.jpeg)"></div>
                     <div class="pl-3">
-                      <p class="name">Roger Scott</p>
-                      <span class="position">Marketing Manager</span>
+                      <p class="name">Sunthari</p>
+                      <span class="position">Singapore</span>
                     </div>
                   </div>
                 </div>
@@ -978,9 +998,9 @@
                     Francisco, California, USA</span></li> -->
                 <li><a target="_blank" href="https://api.whatsapp.com/send?phone=918105589596&text=Hi"><span
                       class="icon fa fa-phone"></span><span class="text">+91 8105589596</span></a></li>
-                <li><a target="_blank" href="mailto:shravyashageru@gmail.com"><span
+                <li><a target="_blank" href="mailto:teamithiyoga@gmail.com"><span
                       class="icon fa fa-paper-plane pr-4"></span><span
-                      class="text"><span>shravyashageru@gmail.com</span></span></a>
+                      class="text"><span>teamithiyoga@gmail.com</span></span></a>
                 </li>
               </ul>
             </div>
@@ -1025,8 +1045,8 @@
     data-cf-beacon='{"rayId":"800c4dd23fb1306f","version":"2023.8.0","b":1,"token":"cd0b4b3a733644fc843ef0b185f98241","si":100}'
     crossorigin="anonymous">
     </script>
-  <script
-    type="text/javascript">!function (t, e) { t.artibotApi = { l: [], t: [], on: function () { this.l.push(arguments) }, trigger: function () { this.t.push(arguments) } }; var a = !1, i = e.createElement("script"); i.async = !0, i.type = "text/javascript", i.src = "https://app.artibot.ai/loader.js", e.getElementsByTagName("head").item(0).appendChild(i), i.onreadystatechange = i.onload = function () { if (!(a || this.readyState && "loaded" != this.readyState && "complete" != this.readyState)) { new window.ArtiBot({ i: "b92ba74d-e6a9-4199-924b-b8d8fc4591d4" }); a = !0 } } }(window, document);</script>
+  <!-- <script
+    type="text/javascript">!function (t, e) { t.artibotApi = { l: [], t: [], on: function () { this.l.push(arguments) }, trigger: function () { this.t.push(arguments) } }; var a = !1, i = e.createElement("script"); i.async = !0, i.type = "text/javascript", i.src = "https://app.artibot.ai/loader.js", e.getElementsByTagName("head").item(0).appendChild(i), i.onreadystatechange = i.onload = function () { if (!(a || this.readyState && "loaded" != this.readyState && "complete" != this.readyState)) { new window.ArtiBot({ i: "b92ba74d-e6a9-4199-924b-b8d8fc4591d4" }); a = !0 } } }(window, document);</script> -->
 </body>
 
 </html>
