Quotes page changes for contact page

--- a/contact.html
+++ b/contact.html
@@ -133,25 +133,26 @@
 
 	<!-- Qoute Popup container -->
 	<div style="display: none;" class="quote-popup-container" id="quotePopupContainer">
-		<div class="quote-popup-content">
+		<div class="quote-popup-content"
+			style="background-image: url(images/clouds.jpg); background-size: cover; background-repeat: no-repeat; background-position: center;">
 			<div>
 				<div class="row justify-content-start pb-3">
 					<div class="col-md-12 heading-section ftco-animate">
 						<div class="quote-popup-header">
 							<h2 class="mb-4"></h2>
-							<span class="quote-close-button" onclick="closeQuotePopup()">&times;</span>
+							<span style="color: white;" class="quote-close-button"
+								onclick="closeQuotePopup()">&times;</span>
 						</div>
-						<h2 class="mb-4">Welcome to ithi</h2>
 						<div class="d-flex about">
-							<h3 style="font-style: italic;">"I am standing on my own altar, The Poses are my prayers"
-							</h3>
+							<h3 style="color: black ; font-style: italic;">"Let the beauty of what you love be what you
+								do"</h3>
 						</div>
+						<h4 style="color: black;" class="mb-4">Rumi</h4>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-
 	<section class="ftco-section">
 		<div class="container">
 			<div class="row justify-content-center">
