Social Links added

--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
         <div class="col-12 col-md d-flex justify-content-md-end">
           <div class="social-media">
             <p class="mb-0 d-flex">
-              <a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"><i
+              <a href="https://www.facebook.com/ithiyoga" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"><i
                     class="sr-only">Facebook</i></span></a>
               <a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"><i
                     class="sr-only">Twitter</i></span></a>
-              <a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-instagram"><i
+              <a href="https://www.instagram.com/ithi_yoga" class="d-flex align-items-center justify-content-center"><span class="fa fa-instagram"><i
                     class="sr-only">Instagram</i></span></a>
               <a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-dribbble"><i
                     class="sr-only">Dribbble</i></span></a>
@@ -969,8 +969,8 @@
             <p>Every posture as a prayer.</p>
             <ul class="ftco-footer-social list-unstyled mt-2">
               <li class="ftco-animate"><a href="#"><span class="fa fa-twitter"></span></a></li>
-              <li class="ftco-animate"><a href="#"><span class="fa fa-facebook"></span></a></li>
-              <li class="ftco-animate"><a href="#"><span class="fa fa-instagram"></span></a></li>
+              <li class="ftco-animate"><a href="https://www.facebook.com/ithiyoga"><span class="fa fa-facebook"></span></a></li>
+              <li class="ftco-animate"><a href="https://www.instagram.com/ithi_yoga"><span class="fa fa-instagram"></span></a></li>
             </ul>
           </div>
         </div>
