--- a/index.html
+++ b/index.html
@@ -97,11 +97,12 @@
         <div class="col-12 col-md d-flex justify-content-md-end">
           <div class="social-media">
             <p class="mb-0 d-flex">
-              <a href="https://www.facebook.com/ithiyoga" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"><i
-                    class="sr-only">Facebook</i></span></a>
+              <a href="https://www.facebook.com/ithiyoga" class="d-flex align-items-center justify-content-center"><span
+                  class="fa fa-facebook"><i class="sr-only">Facebook</i></span></a>
               <a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"><i
                     class="sr-only">Twitter</i></span></a>
-              <a href="https://www.instagram.com/ithi_yoga" class="d-flex align-items-center justify-content-center"><span class="fa fa-instagram"><i
+              <a href="https://www.instagram.com/ithi_yoga"
+                class="d-flex align-items-center justify-content-center"><span class="fa fa-instagram"><i
                     class="sr-only">Instagram</i></span></a>
               <a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-dribbble"><i
                     class="sr-only">Dribbble</i></span></a>
@@ -572,21 +573,25 @@
             <div class="item">
               <div class="testimony-wrap">
                 <div class="text">
-                  <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and
-                    Consonantia, there live the blind texts. A small river named Duden flows by their place and supplies
-                    it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences
-                    fly into your mouth.</p>
+                  <p class="mb-4">Shruthi from Ithi yoga team is a gem of a yoga teacher. Her dedication, knowledge, and
+                    passion for yoga are palpable in every class. Under her guidance, I have not only seen a significant
+                    improvement in my physical strength and flexibility, but I have also experienced a shift in my
+                    mental and emotional being.
+
+                    I wholeheartedly recommend Shruthi to anyone seeking a transformative yoga experience. Whether
+                    you're a advanced or a beginner practitioner, you'll find her teachings to be a true blessing on
+                    your journey to wellness and self-discovery.</p>
                   <div class="d-flex align-items-center" style="width: 100%;">
-                    <div class="user-img" style="background-image: url(images/person_2.jpg)"></div>
+                    <div class="user-img" style="background-image: url(images/ithiyoga.png)"></div>
                     <div class="pl-3">
-                      <p class="name">Roger Scott</p>
-                      <span class="position">Marketing Manager</span>
+                      <p class="name">Prasanthi Ratna</p>
+                      <span class="position">Pennsylvania USA</span>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="item">
+            <!-- <div class="item">
               <div class="testimony-wrap">
                 <div class="text">
                   <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and
@@ -602,8 +607,8 @@
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="item">
+            </div> -->
+            <!-- <div class="item">
               <div class="testimony-wrap">
                 <div class="text">
                   <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and
@@ -619,8 +624,8 @@
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="item">
+            </div> -->
+            <!-- <div class="item">
               <div class="testimony-wrap">
                 <div class="text">
                   <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and
@@ -637,7 +642,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
@@ -969,8 +974,10 @@
             <p>Every posture as a prayer.</p>
             <ul class="ftco-footer-social list-unstyled mt-2">
               <li class="ftco-animate"><a href="#"><span class="fa fa-twitter"></span></a></li>
-              <li class="ftco-animate"><a href="https://www.facebook.com/ithiyoga"><span class="fa fa-facebook"></span></a></li>
-              <li class="ftco-animate"><a href="https://www.instagram.com/ithi_yoga"><span class="fa fa-instagram"></span></a></li>
+              <li class="ftco-animate"><a href="https://www.facebook.com/ithiyoga"><span
+                    class="fa fa-facebook"></span></a></li>
+              <li class="ftco-animate"><a href="https://www.instagram.com/ithi_yoga"><span
+                    class="fa fa-instagram"></span></a></li>
             </ul>
           </div>
         </div>
