--- a/index.html
+++ b/index.html
@@ -522,10 +522,9 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6 heading-section pr-md-5 py-5 my-md-5 mb-5 mb-md-0 order-md-last">
-          <span class="subheading">Testimonial</span>
+          <span class="subheading">Testimonials</span>
           <h2 class="mb-4">What They Are Saying</h2>
-          <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a
-            paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+          <p>Discover what our students and members have to say about their experience with Ithi yoga.</p>
           <!-- <div class="row my-4">
             <div class="col-lg-6 ftco-animate">
               <div class="services-3 d-flex align-items-center justify-content-between">
