--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@
     </div>
   </nav>
 
-  <section class="hero-wrap degree-right js-fullheight" >
-    <div class="overlay"></div>
-    <div class="overlay-2"></div>
+  <section class="hero-wrap degree-right js-fullheight" style="background-image:url(images/bg_2.jpg);">
+    <!-- <div class="overlay"></div> -->
+    <!-- <div class="overlay-2"></div> -->
     <div class="container">
       <div class="row no-gutters slider-text js-fullheight align-items-center" data-scrollax-parent="true">
         <div class="col-md-12 ftco-animate">
